# Thales

./: (SELECT  .gitignore  1  1741632000  1741753200  300  AGENT.md  CLAUDE.md  SKILL.md  agentic_systems_doctrine_chart_a.md  agentic_weapons_system_taxonomy.md  analysis-forsakenness.md  build_wordlist.py  launch_crack.sh  overnight_crack.sh  overnight_crack_v2.sh  overnight_crack_wsl.sh  thoughts.md
.cursor/agents/: auditor.md  doctrine.md  effector.md  empiricist.md  governor.md  (+13 more)
Thon/: CLAUDE.md  decompile_lampux.sh  extract_lampux_keys.sh  lepro_exploit.py  pineapple_cleanup.sh  pineapple_deny.sh  pineapple_trap.sh  pineapple_verify.sh  pineapple_watch_lepro.sh  snapshot.json  tuya_intercept.sh  watch_lepro.py
Thon/tools/dnSpy-net-win64/: .env  pyproject.toml  server.py
Thon/tools/sdrsharp/mcp_sdrsharp/: README.md  config.py  pyproject.toml  sdr_client.py  server.py
Thon/tools/sdrsharp/mcp_sdrsharp/spyserver/: client.py
Thon/tools/sdrsharp/mcp_sdrsharp/tools/: capture.py  frequency.py  hardware.py  reference.py  scanner.py
analyses/: social-media-brain-impact.md
prompts/: CYBER ARMY DEVELOPMENT PROMPT.md  cyber-army-doctrine-v1.0.docx  worker-auditor.md  worker-empiricist.md  worker-existentialist.md  worker-pragmatist.md  worker-rationalist.md  worker-relational-process.md
state/: schema.json
threads/: agent_md_updates.md  agentic_systems_doctrine_chart_a.md  agentic_systems_taxonomy.md  ai_as_a_weapons_system.md  cursor_file_contents_retrieval_from_thon.md  cursor_file_contents_retrieval_from_thon2.md  cursor_thon_directory_exploration_and_f.md
(+223 files in other folders)
