[project]
name = "dnspy-mcp"
version = "1.0.0"
description = "dnSpy .NET Decompiler & Assembly Analyzer MCP Server"
authors = [
    { name = "Dallas", email = "dallas@royaltreeservices.ca" }
]
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "python-dotenv>=1.0.0",
    "dnfile>=0.15.0",
    "pefile>=2023.2.7",
]

[project.scripts]
dnspy-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["server.py"]
