[project]
name = "sdr-mcp"
version = "1.0.0"
description = "SDR (Software Defined Radio) MCP Server — RTL-SDR hardware control via CLI tools and SpyServer"
authors = [
    { name = "Dallas", email = "dallas@royaltreeservices.ca" }
]
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
]

[project.scripts]
sdr-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["server.py", "config.py", "sdr_client.py", "tools/", "spyserver/"]
